fixing a letter spacing issue.

--- a/assets/stylesheets/me.css
+++ b/assets/stylesheets/me.css
@@ -280,7 +280,7 @@ ul, ol {
   .container h1, .container h2 {
     text-align: center;
     text-transform: uppercase;
-    letter-spacing: -0.25em;
+    letter-spacing: -0.025em;
     position: relative;}
 
 .me {
